[project]
name = "core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tremgan", email = "tregan.remi@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=1.4.0,<3",
    "pytest>=9.0.2",
    "sqlmodel>=0.0.37",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
