[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "core",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "pytz>=2026.1.post1",
    "requests>=2.32.5",
    "streamlit>=1.55.0",
]

[tool.uv.sources]
core = { path = "../core", editable = true }

[tool.pytest.ini_options]
pythonpath = ["."]