[project]
name = "db-service"
version = "0.1.0"
description = "This project exposes an api to read and write for an external database"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.42.0",
]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
