[project]
name = "db-service"
version = "0.1.0"
description = "This project exposes an api to read and write for an external database"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "core",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.1.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.3",
    "rich>=14.3.3",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.42.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.uv.sources]
core = { path = "../core", editable = true }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
