[project]
name = "loro-scrape-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "core",
    "requests>=2.32.5",
    "rich>=14.3.3",
]

[tool.uv.sources]
core = { path = "../core", editable = true }

[tool.pytest.ini_options]
pythonpath = ["."]